--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,18 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ========================
+Changes in version 1.0.5
+========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Give name suffixes the same formatting as the family
+  name-part.
+
+
+========================
 Changes in version 1.0.4
 ========================
 
